review text overflow is corrected

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -436,18 +436,18 @@
 }
 
 .truncated-description {
-    flex-grow: 1; /* Ensures equal height for text */
+    flex-grow: 1;
     overflow: hidden;
     display: -webkit-box;
-    -webkit-line-clamp: 3; /* Limits description to 3 lines */
+    -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
 }
 
 .summary-truncated-description {
-    flex-grow: 1; /* Ensures equal height for text */
+    flex-grow: 1;
     overflow: hidden;
     display: -webkit-box;
-    -webkit-line-clamp: 1; /* Limits description to 3 lines */
+    -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;
 }
 
@@ -810,11 +810,13 @@ footer hr {
     transform: rotate(180deg);
     transition: transform 0.3s ease;
 }
+
 /* .custom-dropdown{
     left: 85% !important;
     top: 60px !important;
     transform: translate(-84%, 0);
 } */
+
 /* .user-dropdown_cart {
     right: 25% !important;
     left: auto !important;
@@ -842,7 +844,6 @@ footer hr {
         width: 200px;
     }
 }
-
 /* Dropdown arrow */
 
 /* Product View */
@@ -1773,14 +1774,12 @@ footer hr {
 }
 
 .shareInsta {
-    background: linear-gradient(
-        45deg,
-        #f09433,
-        #e6683c,
-        #dc2743,
-        #cc2366,
-        #bc1888
-    );
+    background: linear-gradient(45deg,
+            #f09433,
+            #e6683c,
+            #dc2743,
+            #cc2366,
+            #bc1888);
     border: none;
     color: #fff;
     border-radius: 5px;
@@ -2046,14 +2045,12 @@ footer hr {
     }
 
     .social-link-container .fa-instagram {
-        background: linear-gradient(
-            45deg,
-            #f09433,
-            #e6683c,
-            #dc2743,
-            #cc2366,
-            #bc1888
-        );
+        background: linear-gradient(45deg,
+                #f09433,
+                #e6683c,
+                #dc2743,
+                #cc2366,
+                #bc1888);
         padding: 8px 5px;
         width: 30px;
         height: 28px;
@@ -2148,14 +2145,12 @@ footer hr {
 }
 
 .social-link-container .fa-instagram {
-    background: linear-gradient(
-        45deg,
-        #f09433,
-        #e6683c,
-        #dc2743,
-        #cc2366,
-        #bc1888
-    );
+    background: linear-gradient(45deg,
+            #f09433,
+            #e6683c,
+            #dc2743,
+            #cc2366,
+            #bc1888);
     padding: 7px 5px;
     width: 30px;
     height: 28px;
@@ -2461,9 +2456,11 @@ footer hr {
     .carousel-item {
         width: 50%;
     }
+
     .breadcrumb_section {
         padding: 0 !important;
     }
+
     .order_heading {
         display: flex;
         flex-direction: column;
@@ -2479,6 +2476,7 @@ footer hr {
     align-items: start;
     margin-bottom: 10px;
 }
+
 .breadcrumb_section {
     padding: 0 3rem;
 }
@@ -2973,7 +2971,7 @@ footer hr {
 
 #starRating .star.selected,
 #starRating .star:hover,
-#starRating .star:hover ~ .star {
+#starRating .star:hover~.star {
     color: #ffc033;
 }
 
@@ -3023,11 +3021,11 @@ footer hr {
 }
 
 /* Show dropdown on hover */
-.social_links i:hover + .dropdown_items {
+.social_links i:hover+.dropdown_items {
     display: block;
 }
 
-.filter_social_links i:hover + .filter_dropdown_items {
+.filter_social_links i:hover+.filter_dropdown_items {
     display: block;
 }
 
@@ -3183,6 +3181,7 @@ footer hr {
         text-align: start;
         align-items: center !important;
     }
+
     .review_btn {
         padding: 4px 7px;
         background-color: #fff;
@@ -3241,6 +3240,7 @@ footer hr {
     .media_fonts_headings {
         font-size: 20px;
     }
+
     .media_fonts_conent {
         padding: 10px 17px;
         font-size: 13px !important;
@@ -3276,8 +3276,8 @@ footer hr {
     border-color: #ff0060;
 }
 
-.card.card_style .form-check-input:checked ~ div,
-.card.card_style .form-check-input:checked + label {
+.card.card_style .form-check-input:checked~div,
+.card.card_style .form-check-input:checked+label {
     border-color: #ff0060;
     color: #ff0060;
 }
@@ -3842,6 +3842,7 @@ footer hr {
 }
 
 @media (max-width: 576px) {
+
     .total,
     .subtotal,
     .discount {
@@ -3893,6 +3894,7 @@ footer hr {
         display: none !important;
     }
 }
+
 @media screen and (max-width: 424px) {
     .card-content {
         display: flex;
@@ -3987,6 +3989,7 @@ footer hr {
         padding: 4px 10px;
     }
 }
+
 @media screen and (max-width: 767px) {
     .checkoutsummary-card2 {
         text-align: start !important;
@@ -4125,37 +4128,44 @@ footer hr {
     .order-id1 {
         font-size: 12px;
     }
+
     .coupon_code_font {
         display: flex;
         flex-direction: column;
         gap: 3px;
         font-size: 12px;
     }
+
     .batch_code {
         display: flex;
         gap: 3px;
         font-size: 12px;
     }
+
     .coupon_code_align {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
         align-items: start;
     }
+
     .date_align {
         display: flex;
         gap: 3px;
         font-size: 12px;
     }
+
     .order_align {
         display: flex;
         flex-direction: column;
         gap: 10px;
     }
+
     .sm_screen_btn {
         padding: 3px 6px !important;
         font-size: 10px !important;
     }
+
     .check_out_btn {
         padding: 6px 16px;
         background: #00dd21;
@@ -4166,6 +4176,7 @@ footer hr {
         border-radius: 3px !important;
     }
 }
+
 .coupon_code_align {
     display: flex;
     justify-content: space-between;
@@ -4176,6 +4187,7 @@ footer hr {
     display: flex;
     gap: 3px;
 }
+
 .coupon_code_font {
     display: flex;
     gap: 3px;
@@ -4272,6 +4284,7 @@ footer hr {
 .productFilter .dropdown_items {
     top: 45%;
 }
+
 /* .productFilter .filter_social_links {
     top: 25%;
 }
@@ -4352,21 +4365,32 @@ footer hr {
         font-size: 32px;
         font-weight: 550;
     }
+
     .coupon-align {
         font-size: 26px;
     }
 }
+
 @media screen and (min-width: 768px) and (max-width: 992px) {
     .current-price {
         font-size: 30px;
         font-weight: 550;
     }
+
     .coupon-align {
         font-size: 18px;
     }
 }
+
 @media screen and (max-width: 347px) {
     .coupon-align1 {
         font-size: 12px;
     }
+}
+
+.review-text {
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    white-space: normal;
+    max-width: 100%;
 }
